crates/solidity/testing/snapshots/bindings_output/enums/sample/v2/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected CloseBrace or OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[input.sol:17:5]
    │
 17 │ ╭─▶     function getChoice() public view returns (ActionChoices) {
    ┆ ┆   
 31 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯

------------------------------------------------------------------------

Definitions (9):
- Def: #1 ["Test" @ input.sol:4:10] (contract)
- Def: #2 ["ActionChoices" @ input.sol:5:10] (enum)
- Def: #3 ["GoLeft" @ input.sol:5:26] (enum member of ActionChoices)
- Def: #4 ["GoRight" @ input.sol:5:34] (enum member of ActionChoices)
- Def: #5 ["GoStraight" @ input.sol:5:43] (enum member of ActionChoices)
- Def: #6 ["SitStill" @ input.sol:5:55] (enum member of ActionChoices)
- Def: #7 ["choice" @ input.sol:7:19] (state var, type: ActionChoices)
- Def: #8 ["defaultChoice" @ input.sol:8:28] (constant, type: ActionChoices)
- Def: #9 ["setGoStraight" @ input.sol:10:14] (function, type: function () returns void)

------------------------------------------------------------------------

References (7):
- Ref: ["ActionChoices" @ input.sol:7:5] -> #2
- Ref: ["ActionChoices" @ input.sol:8:5] -> #2
- Ref: ["ActionChoices" @ input.sol:8:44] -> #2
- Ref: ["GoStraight" @ input.sol:8:58] -> #5
- Ref: ["choice" @ input.sol:11:9] -> #7
- Ref: ["ActionChoices" @ input.sol:11:18] -> #2
- Ref: ["GoStraight" @ input.sol:11:32] -> #5

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
    ╭─[input.sol:1:1]
    │
  4 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
  5 │     enum ActionChoices { GoLeft, GoRight, GoStraight, SitStill }
    │          ──────┬──────   ───┬──  ───┬───  ─────┬────  ────┬───  
    │                ╰──────────────────────────────────────────────── name: 2
    │                             │       │          │          │     
    │                             ╰─────────────────────────────────── name: 3
    │                                     │          │          │     
    │                                     ╰─────────────────────────── name: 4
    │                                                │          │     
    │                                                ╰──────────────── name: 5
    │                                                           │     
    │                                                           ╰───── name: 6
    │ 
  7 │     ActionChoices choice;
    │     ──────┬────── ───┬──  
    │           ╰─────────────── ref: 2
    │                      │    
    │                      ╰──── name: 7
  8 │     ActionChoices constant defaultChoice = ActionChoices.GoStraight;
    │     ──────┬──────          ──────┬──────   ──────┬────── ─────┬────  
    │           ╰────────────────────────────────────────────────────────── ref: 2
    │                                  │               │            │      
    │                                  ╰─────────────────────────────────── name: 8
    │                                                  │            │      
    │                                                  ╰─────────────────── ref: 2
    │                                                               │      
    │                                                               ╰────── ref: 5
    │ 
 10 │     function setGoStraight() public {
    │              ──────┬──────  
    │                    ╰──────── name: 9
 11 │         choice = ActionChoices.GoStraight;
    │         ───┬──   ──────┬────── ─────┬────  
    │            ╰─────────────────────────────── ref: 7
    │                        │            │      
    │                        ╰─────────────────── ref: 2
    │                                     │      
    │                                     ╰────── ref: 5
────╯
